# deployed-crew

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
chroma/: chroma.sqlite3
db/: chroma.sqlite3
docs/: ai_tool_usage.md
knowledge/: user_preference.txt
src/building_a_multi_agent_finance_assistant_with_voice_interaction/: app.py  crew.py  main.py  packages.txt  requirements.txt  rwg.py
src/building_a_multi_agent_finance_assistant_with_voice_interaction/chroma/: chroma.sqlite3
src/building_a_multi_agent_finance_assistant_with_voice_interaction/config/: agents.yaml  tasks.yaml
src/building_a_multi_agent_finance_assistant_with_voice_interaction/db/: chroma.sqlite3
src/building_a_multi_agent_finance_assistant_with_voice_interaction/tools/: confidence_tool.py  custom_tool.py  finance_tools.py  search.py
